# bevy_3d_template

./: Cargo.toml
src/: barrel.rs  main.rs  player.rs  world.rs
