[package]
name = "template_3d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy-inspector-egui = "0.18.3"
bevy_panorbit_camera = "0.2.0"
bevy_prototype_debug_lines = { version = "0.10", features = ["3d"] }